syntax = "proto3";
option optimize_for = LITE_RUNTIME;

package bsvproto;

enum BSVTypeKind {
  Symbolic = 0;
  Numeric = 1;
};

message BSVType {
  BSVTypeKind kind = 1;
  string name = 2;
  bool isVar = 3;
  repeated BSVType param = 4;
}
